...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/message_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
...
                android:layout_height="15dp"
                android:background="@drawable/ic_message_callout_spike"
                android:backgroundTint="@color/messageReceived"
                android:scaleX="-1" />

            <LinearLayout
                android:id="@+id/callout_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_received"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
...
