package com.ux7.fullhyve.ui.activities;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import com.ux7.fullhyve.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.longClick;
import static android.support.test.espresso.action.ViewActions.pressImeActionButton;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class SomeTest {

  @Rule
  public ActivityTestRule<HomeView> mActivityTestRule = new ActivityTestRule<>(HomeView.class);

  @Test
  public void someTest() {
    ViewInteraction appCompatEditText = onView(
      allOf(withId(R.id.username), withText("samwolde"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          0),
        isDisplayed()));
    appCompatEditText.perform(click());

    ViewInteraction appCompatEditText2 = onView(
      allOf(withId(R.id.username), withText("samwolde"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          0),
        isDisplayed()));
    appCompatEditText2.perform(click());

    ViewInteraction appCompatEditText3 = onView(
      allOf(withId(R.id.username), withText("samwolde"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          0),
        isDisplayed()));
    appCompatEditText3.perform(click());

    ViewInteraction appCompatEditText4 = onView(
      allOf(withId(R.id.username), withText("samwolde"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          0),
        isDisplayed()));
    appCompatEditText4.perform(pressImeActionButton());

    ViewInteraction appCompatEditText5 = onView(
      allOf(withId(R.id.password), withText("1234"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          1),
        isDisplayed()));
    appCompatEditText5.perform(click());

    ViewInteraction appCompatEditText6 = onView(
      allOf(withId(R.id.password), withText("1234"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          1),
        isDisplayed()));
    appCompatEditText6.perform(click());

    ViewInteraction appCompatEditText7 = onView(
      allOf(withId(R.id.password), withText("1234"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            1),
          1),
        isDisplayed()));
    appCompatEditText7.perform(pressImeActionButton());

    ViewInteraction appCompatButton = onView(
      allOf(withId(R.id.login_button), withText("Sign In"),
        childAtPosition(
          childAtPosition(
            withClassName(is("android.widget.LinearLayout")),
            0),
          2),
        isDisplayed()));
    appCompatButton.perform(click());

    ViewInteraction navigationMenuItemView = onView(
      allOf(childAtPosition(
        allOf(withId(R.id.design_navigation_view),
          childAtPosition(
            withId(R.id.nav_view),
            0)),
        3),
        isDisplayed()));
    navigationMenuItemView.perform(click());

    ViewInteraction recyclerView = onView(
      allOf(withId(R.id.list),
        childAtPosition(
          withId(R.id.content_frame),
          0)));
    recyclerView.perform(actionOnItemAtPosition(0, click()));

    ViewInteraction linearLayout = onView(
      allOf(withId(R.id.callout_body),
        childAtPosition(
          allOf(withId(R.id.message_layout),
            childAtPosition(
              withClassName(is("android.widget.LinearLayout")),
              1)),
          2),
        isDisplayed()));
    linearLayout.perform(longClick());

    ViewInteraction linearLayout2 = onView(
      allOf(withId(R.id.callout_body),
        childAtPosition(
          allOf(withId(R.id.message_layout),
            childAtPosition(
              withClassName(is("android.widget.LinearLayout")),
              1)),
          2),
        isDisplayed()));
    linearLayout2.perform(click());

  }

  public static Matcher<View> childAtPosition(
    final Matcher<View> parentMatcher, final int position) {

    return new TypeSafeMatcher<View>() {
      @Override
      public void describeTo(Description description) {
        description.appendText("Child at position " + position + " in parent ");
        parentMatcher.describeTo(description);
      }

      @Override
      public boolean matchesSafely(View view) {
        ViewParent parent = view.getParent();
        return parent instanceof ViewGroup && parentMatcher.matches(parent)
          && view.equals(((ViewGroup) parent).getChildAt(position));
      }
    };
  }
}
